--- a/mobile.css
+++ b/mobile.css
@@ -11,14 +11,18 @@ html{
 */img{
 width:90%;
 padding:15px;
-
-
 }
 
+
+ 
+}
+
+
 .border{
-	padding: 1.3rem;
-	background-color: gold;
-	position: static;
+	padding:5px;
+	height: 5px;
+	background-color:gold;
+	
 }
 
 
@@ -29,15 +33,28 @@ padding:15px;
 
 
 
-.icon{
-/*	height:1rem;
-*/	position:relative;
-	right:9rem;
+.icon1{
+	position:relative;
+	right:7rem;
 	top:4rem;
-	height: 1.4rem;
+	height: 1rem;
 
 }
 
+.icon2{
+
+	position:relative;
+	right:7rem;
+	top:4rem;
+	height: 1rem;
+}
+
+.icon3{
+	position:relative;
+	right:7rem;
+	top:4rem;
+	height: 1rem;
+}
 .border1{
 	padding: 0.5rem;
 	background-color: gold;
@@ -48,16 +65,21 @@ padding:15px;
 span{
 	color:blue;
 }
+.video{
+	grid-column: 1/4;
+ grid-row: 5/6;
+height: 200px;
+ width: 400px;
+ position: relative;
+ top:1rem;
+}
 
 h1{
 margin-left: 3rem;
 }
 
 .contact{
-/*height:1rem;
-	position:relative;
-	right:9rem;
-	top:4rem;*/
+
 	height: 1.4rem;
 	width: 1.4rem;
 color:black;
@@ -71,6 +93,35 @@ color:black;
 
 }
 
+#knop{
+	width: 50px;
+	background-color:grey;
+	text-align: center;
+	cursor: pointer;
+
+}
+
+ #menu{
+	padding:0;
+	list-style-type: none;
+	height: 0;
+	overflow: hidden;}
+
+	#knop1{
+	width: 50px;
+	background-color:grey;
+	text-align: center;
+	cursor: pointer;
+
+}
+
+ #menu1{
+	padding:0;
+	list-style-type: none;
+	height: 0;
+	overflow: hidden;}
+
+
 @media(min-width: 768px){
 html{
 	background-color: white;
@@ -79,8 +130,11 @@ html{
 	font-family: 'Archivo', sans-serif;
 }
 img{
-width:50%;
+width:20%;
 padding:15px;
+position: relative;
+bottom:100px;
+
 
 }
 .bozemeneer{
@@ -88,6 +142,123 @@ width:80%;
 padding:15px;
 }
 
+.grid-container{
+		display:grid;
+	grid-template-rows: 100px 1px 300px 200px 300px;
+grid-template-columns:400px 400px 400px 400px;
+}
+.icon1{
+grid-column: 1/2;
+ grid-row: 1/2;
+ position: relative;
+left:1px;
+ top:30px;}
 
+.icon2{
+grid-column: 2/3;
+ grid-row: 1/2;
+ position: relative;
+left:1px;
+ top:30px;
+}
+
+.icon3{
+grid-column: 3/4;
+ grid-row: 1/2;
+  position: relative;
+left:1px;
+ top:30px;
+}
+
+
+.proefles{
+	grid-column: 1/2;
+ grid-row: 1/2;
+}
+.locaties{
+		grid-column: 2/3;
+ grid-row: 1/2;
+}
+.social{
+	position: relative;
+	right:5px;
+	top:20px;
+}
+.contact{
+	position: relative;
+	left:20px;
+	top:30px;
+}
+.bewijs{
+	position: relative;
+	left:300px;
+	font-size: 40px;
+}
+
+
+
+.rijlessen{
+		grid-column: 3/4;
+ grid-row: 1/2;
+}
+.FLEXi1{
+	grid-column: 1/2;
+ grid-row: 3/4;
+}
+.FLEXi2{
+	grid-column: 2/3;
+ grid-row: 3/4;
+}
+.FLEXi3{
+	grid-column: 3/4;
+ grid-row: 3/4;
+}
+.border1{
+		grid-column: 1/2;
+ grid-row: 4/4;
+ width: 200px;
+padding: 0.5rem;
+
+}.knop{
+	width: 50px;
+	background-color:grey;
+	text-align: center;
+	cursor: pointer;
+
+}
+
+#knop{
+	display: none;
+}
+  #menu> li{
+  	display: inline-block;
+  }
+  #menu{
+  	height:auto !important;
+  }
+#knop1{
+	display: none;
+}
+  #menu1> li{
+  	display: inline-block;
+  }
+  #menu1{
+  	height:auto !important;
+  }
+
+
+
+
+hr{
+	overflow: hidden;
+}
+.video{
+	grid-column: 1/4;
+ grid-row: 5/6;
+ height: 700px;
+ width: 1600px;
+ position: relative;
+ top:50px;
+}
 }
 
